<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.SeriesActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" tools:layout_editor_absoluteY="0dp"
            tools:layout_editor_absoluteX="16dp">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">

            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:layout_marginBottom="50dp" android:padding="20dp">

                <ImageView
                        android:layout_width="139dp"
                        android:layout_height="107dp"
                        app:srcCompat="@mipmap/ic_launcher"
                        android:id="@+id/series_thumbnail"
                        android:layout_marginTop="80dp"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/characters_in_series"
                        app:layout_constraintVertical_bias="0.091"
                        android:layout_marginEnd="112dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:contentDescription="@string/thumbnail" android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
                        tools:ignore="NotSibling"/>
                <TextView
                        android:text="@string/series_description"
                        android:layout_width="232dp"
                        android:layout_height="62dp"
                        android:id="@+id/series_description"
                        android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="8dp"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                        android:text="@string/title"
                        android:layout_width="88dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/series_title"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toBottomOf="@+id/series_thumbnail"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="100dp"
                        android:textSize="30sp"
                        app:layout_constraintHorizontal_bias="0.283" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toTopOf="@+id/series_description"
                        app:layout_constraintVertical_bias="0.435"/>
            </android.support.constraint.ConstraintLayout>

            <Button
                    android:text="@string/add_to_favorites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/add_favorite_btn" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="40dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/series_thumbnail"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/characters_in_series"
                    app:layout_constraintVertical_bias="0.741" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"/>
            <Button
                    android:text="@string/learn_more"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/wiki_button"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/characters_in_series"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/series_thumbnail"
                    app:layout_constraintVertical_bias="0.741"
                    android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.108"/>


            <TextView
                    android:text="@string/characters_that_appears"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:id="@+id/text_characters_header" android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toTopOf="@+id/characters_in_series" android:layout_marginTop="28dp"
                    app:layout_constraintTop_toBottomOf="@+id/wiki_button" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="80dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintVertical_bias="0.0" app:layout_constraintHorizontal_bias="0.493"/>

            <android.support.v7.widget.RecyclerView
                    android:layout_width="363dp"
                    android:layout_height="218dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    android:id="@+id/characters_in_series" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"/>
        </LinearLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>