<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activities.CharacterActivity">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="match_parent"
                    android:id="@+id/container1">
        android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>-->
        <ImageView
                android:layout_width="139dp"
                android:layout_height="107dp"
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/character_thumbnail"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.331"
                android:layout_marginEnd="143dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="129dp"
                app:layout_constraintStart_toStartOf="parent"
                android:contentDescription="@string/thumbnail" android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true" android:layout_alignParentStart="true"/>
        <TextView
                android:text="@string/name"
                android:layout_width="403dp"
                android:layout_height="51dp"
                android:id="@+id/character_name"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/character_thumbnail"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintVertical_bias="0.068" android:textSize="30sp"
                app:layout_constraintHorizontal_bias="0.498" android:layout_alignParentEnd="true"
                android:layout_below="@+id/character_thumbnail"/>
        <TextView
                android:text="@string/character_description"
                android:layout_width="match_parent"
                android:layout_height="95dp"
                android:id="@+id/character_description"
                app:layout_constraintTop_toBottomOf="@+id/character_name" android:layout_marginBottom="8dp"
                app:layout_constraintVertical_bias="0.28"
                android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp" android:layout_below="@+id/character_name"/>

        <Button
                android:text="@string/learn_more"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/wiki_button"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="310dp"
                app:layout_constraintVertical_bias="0.741"
                android:layout_marginEnd="164dp"
                app:layout_constraintHorizontal_bias="0.108"
                android:layout_alignParentTop="true"/>
        <TextView
                android:text="@string/series_where_the_character_appears"
                android:layout_width="362dp"
                android:layout_height="29dp"
                android:id="@+id/text_series_header"
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/wiki_button" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="11dp"
                app:layout_constraintHorizontal_bias="0.497" app:layout_constraintVertical_bias="0.28"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/wiki_button"/>
        <Button
                android:text="@string/add_to_favorites"
                android:layout_width="214dp"
                android:layout_height="wrap_content"
                android:id="@+id/add_favorite_btn" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="310dp"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.741" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="1.0"
                android:layout_alignParentEnd="true" android:layout_above="@+id/text_series_header"
                android:layout_alignParentTop="true"/>
        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="201dp" android:layout_marginTop="394dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="1.0"
                android:id="@+id/character_series" app:layout_constraintStart_toStartOf="parent"
                android:layout_below="@+id/text_series_header" android:layout_alignParentEnd="true"
                android:layout_marginEnd="0dp" android:layout_alignParentTop="true"/>

    </RelativeLayout>


    <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="496dp"
            android:id="@+id/floatingActionMenu"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            app:menu_showShadow="true"
            app:menu_fab_label=""
            app:menu_openDirection="up"
            app:menu_icon="@drawable/ic_menu"
            tools:ignore="MissingConstraints"
            android:layout_marginStart="16dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="0dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="15dp" app:layout_anchorGravity="right|bottom"
            app:layout_anchor="@+id/relativeLayout" android:layout_marginTop="16dp" android:layout_marginRight="0dp">


        <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="All Characters"
                app:fab_size="mini"
                android:id="@+id/nav_all_characters"
                android:src="@drawable/ic_character"/>

        <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="Search Character"
                app:fab_size="mini"
                android:id="@+id/nav_search_character"
                android:src="@drawable/ic_search"/>

        <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="Show Favorite Characters"
                app:fab_size="mini"
                android:id="@+id/nav_show_favorite_characters"
                android:src="@drawable/ic_favorite"/>

        <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="All Series"
                app:fab_size="mini"
                android:id="@+id/nav_all_series"
                android:src="@drawable/ic_series"/>

        <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="Search Series"
                app:fab_size="mini"
                android:id="@+id/nav_search_series"
                android:src="@drawable/ic_search"/>


        <com.github.clans.fab.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_label="Show Favorite Series"
                app:fab_size="mini"
                android:id="@+id/nav_show_favorite_series"
                android:src="@drawable/ic_favorite"/>


    </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>